--- a/app/views/layouts/blazer/application.html.erb
+++ b/app/views/layouts/blazer/application.html.erb
@@ -4,10 +4,9 @@
     <title><%= blazer_title ? blazer_title : "Blazer" %></title>
 
     <meta charset="utf-8" />
-    <meta name="turbolinks-cache-control" content="no-cache">
 
-    <%= stylesheet_link_tag "blazer/application", "data-turbolinks-track" => "reload" %>
-    <%= javascript_include_tag "blazer/application", "data-turbolinks-track" => "reload" %>
+    <%= stylesheet_link_tag "blazer/application" %>
+    <%= javascript_include_tag "blazer/application" %>
     <script>
       var runQueriesPath = <%= run_queries_path.to_json.html_safe %>;
       var cancelQueriesPath = <%= cancel_queries_path.to_json.html_safe %>;
