Make everything more mobile responsive
Add meta viewport

--- a/app/assets/stylesheets/blazer/application.css
+++ b/app/assets/stylesheets/blazer/application.css
@@ -12,8 +12,11 @@ pre {
 }
 
 body {
-  padding-top: 20px;
   padding-bottom: 20px;
+}
+
+body.no-topbar {
+  padding-top: 20px;
 }
 
 .results-table th {
@@ -139,13 +142,14 @@ input.search:focus {
 }
 
 .topbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
   background-color: whitesmoke;
-  height: 60px;
   z-index: 1001;
+  padding: 10px 0;
+  margin-bottom: 10px;
+}
+
+.topbar.topbar-transparent {
+  background-color: transparent;
 }
 
 .glyphicon-remove {
@@ -173,4 +177,14 @@ input.search:focus {
 
 #code.expanded {
   max-height: none;
+}
+
+.blazer-nav {
+  vertical-align: top;
+  margin-right: 5px;
+}
+
+.table-responsive {
+  overflow-x: auto;
+  overflow-y: hidden;
 }
