--- a/app/views/blazer/_nav.html.erb
+++ b/app/views/blazer/_nav.html.erb
@@ -1,4 +1,4 @@
-<div class="btn-group" style="vertical-align: top; margin-right: 5px;">
+<div class="btn-group blazer-nav">
   <%= link_to "Home", root_path, class: "btn btn-primary" %>
   <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     <span class="caret"></span>
