--- a/app/views/blazer/queries/home.html.erb
+++ b/app/views/blazer/queries/home.html.erb
@@ -1,51 +1,57 @@
-<div id="queries">
-  <div id="header" style="margin-bottom: 20px;">
-    <div class="pull-right">
-      <% if blazer_user %>
-        <%= link_to "All", root_path, class: !params[:filter] ? "active" : nil, style: "margin-right: 40px;" %>
+<% content_for :topbar do %>
+  <div class="topbar topbar-transparent">
+    <div class="container">
+      <div class="pull-right">
+        <% if blazer_user %>
+          <%= link_to "All", root_path, class: !params[:filter] ? "active" : nil, style: "margin-right: 40px;" %>
 
-        <% if Blazer.audit %>
-          <%= link_to "Viewed", root_path(filter: "viewed"), class: params[:filter] == "viewed" ? "active" : nil, style: "margin-right: 40px;" %>
+          <% if Blazer.audit %>
+            <%= link_to "Viewed", root_path(filter: "viewed"), class: params[:filter] == "viewed" ? "active" : nil, style: "margin-right: 40px;" %>
+          <% end %>
+
+          <%= link_to "Mine", root_path(filter: "mine"), class: params[:filter] == "mine" ? "active" : nil, style: "margin-right: 40px;" %>
         <% end %>
-
-        <%= link_to "Mine", root_path(filter: "mine"), class: params[:filter] == "mine" ? "active" : nil, style: "margin-right: 40px;" %>
-      <% end %>
-      <div class="btn-group">
-        <%= link_to "New Query", new_query_path, class: "btn btn-info" %>
-        <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <span class="caret"></span>
-          <span class="sr-only">Toggle Dropdown</span>
-        </button>
-        <ul class="dropdown-menu">
-          <li><%= link_to "Dashboards", dashboards_path %></li>
-          <li><%= link_to "Checks", checks_path %></li>
-          <li role="separator" class="divider"></li>
-          <li><%= link_to "New Dashboard", new_dashboard_path %></li>
-          <li><%= link_to "New Check", new_check_path %></li>
-        </ul>
+        <div class="btn-group">
+          <%= link_to "New Query", new_query_path, class: "btn btn-info" %>
+          <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span class="caret"></span>
+            <span class="sr-only">Toggle Dropdown</span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Dashboards", dashboards_path %></li>
+            <li><%= link_to "Checks", checks_path %></li>
+            <li role="separator" class="divider"></li>
+            <li><%= link_to "New Dashboard", new_dashboard_path %></li>
+            <li><%= link_to "New Check", new_check_path %></li>
+          </ul>
+        </div>
       </div>
+      <input type="text" placeholder="Start typing a query or person" style="width: 300px; display: inline-block;" autofocus=true class="search form-control" />
     </div>
-    <input type="text" placeholder="Start typing a query or person" style="width: 300px; display: inline-block;" autofocus=true class="search form-control" />
   </div>
+<% end %>
 
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th style="width: 20%; text-align: right;">Mastermind</th>
-      </tr>
-    </thead>
-    <tbody class="list">
-      <tr id="search-item">
-        <td>
-          <span class="name"></span>
-          <span class="vars"></span>
-          <span class="hide"></span>
-        </td>
-        <td class="creator"></td>
-      </tr>
-    </tbody>
-  </table>
+<div id="queries">
+  <div class="table-responsive">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th style="width: 20%; text-align: right;">Mastermind</th>
+        </tr>
+      </thead>
+      <tbody class="list">
+        <tr id="search-item">
+          <td>
+            <span class="name"></span>
+            <span class="vars"></span>
+            <span class="hide"></span>
+          </td>
+          <td class="creator"></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
 
 <script>
