--- a/app/views/blazer/queries/run.html.erb
+++ b/app/views/blazer/queries/run.html.erb
@@ -9,7 +9,7 @@
 <% else %>
   <% unless @only_chart %>
     <% if @cached_at || @just_cached %>
-      <p class="text-muted" style="float: right;">
+      <p class="text-muted pull-right">
         <% if @cached_at %>
           Cached <%= time_ago_in_words(@cached_at, include_seconds: true) %> ago
         <% elsif !params[:data_source] %>
@@ -110,48 +110,50 @@
         <% if @columns == ["QUERY PLAN"] %>
           <pre><code><%= @rows.map { |r| r[0] }.join("\n") %></code></pre>
         <% else %>
-          <table class="table results-table" style="margin-bottom: 0;">
-            <thead>
-              <tr>
-                <% @columns.each_with_index do |key, i| %>
-                  <% type = @column_types[i] %>
-                  <th style="width: <%= header_width %>%;" data-sort="<%= type %>">
-                    <div style="min-width: <%= @min_width_types.include?(i) ? 180 : 60 %>px;">
-                      <%= key %>
-                    </div>
-                  </th>
-                <% end %>
-              </tr>
-            </thead>
-            <tbody>
-              <% @rows.each do |row| %>
+          <div class="table-responsive">
+            <table class="table results-table" style="margin-bottom: 0;">
+              <thead>
                 <tr>
-                  <% row.each_with_index do |v, i| %>
-                    <% k = @columns[i] %>
-                    <td>
-                      <% if v.is_a?(Time) %>
-                        <% v = blazer_time_value(@data_source, k, v) %>
-                      <% end %>
-
-                      <% unless v.nil? %>
-                        <% if v.is_a?(String) && v == "" %>
-                          <div class="text-muted">empty string</div>
-                        <% elsif @linked_columns[k] %>
-                          <%= link_to blazer_format_value(k, v), @linked_columns[k].gsub("{value}", u(v.to_s)), target: "_blank" %>
-                        <% else %>
-                          <%= blazer_format_value(k, v) %>
-                        <% end %>
-
-                        <% if v2 = (@boom[k] || {})[v.to_s] %>
-                          <div class="text-muted"><%= v2 %></div>
-                        <% end %>
-                      <% end %>
-                    </td>
+                  <% @columns.each_with_index do |key, i| %>
+                    <% type = @column_types[i] %>
+                    <th style="width: <%= header_width %>%;" data-sort="<%= type %>">
+                      <div style="min-width: <%= @min_width_types.include?(i) ? 180 : 60 %>px;">
+                        <%= key %>
+                      </div>
+                    </th>
                   <% end %>
                 </tr>
-              <% end %>
-            </tbody>
-          </table>
+              </thead>
+              <tbody>
+                <% @rows.each do |row| %>
+                  <tr>
+                    <% row.each_with_index do |v, i| %>
+                      <% k = @columns[i] %>
+                      <td>
+                        <% if v.is_a?(Time) %>
+                          <% v = blazer_time_value(@data_source, k, v) %>
+                        <% end %>
+
+                        <% unless v.nil? %>
+                          <% if v.is_a?(String) && v == "" %>
+                            <div class="text-muted">empty string</div>
+                          <% elsif @linked_columns[k] %>
+                            <%= link_to blazer_format_value(k, v), @linked_columns[k].gsub("{value}", u(v.to_s)), target: "_blank" %>
+                          <% else %>
+                            <%= blazer_format_value(k, v) %>
+                          <% end %>
+
+                          <% if v2 = (@boom[k] || {})[v.to_s] %>
+                            <div class="text-muted"><%= v2 %></div>
+                          <% end %>
+                        <% end %>
+                      </td>
+                    <% end %>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </div>
         <% end %>
       </div>
     <% end %>
