--- a/app/assets/stylesheets/blazer/application.css
+++ b/app/assets/stylesheets/blazer/application.css
@@ -188,3 +188,32 @@ input.search:focus {
   overflow-x: auto;
   overflow-y: hidden;
 }
+
+.btn-query {
+  vertical-align: top;
+  width: 70px;
+}
+
+.selectize-schemas-wrapper {
+  display: inline;
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .query-actions .btn-link {
+    padding: 2px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .btn-query {
+    width: 100%;
+  }
+  .selectize-schemas-wrapper {
+    text-align: center;
+    display: block;
+  }
+
+  .query-actions {
+    text-align: center;
+  }
+}
