--- a/app/views/blazer/queries/_form.html.erb
+++ b/app/views/blazer/queries/_form.html.erb
@@ -4,31 +4,31 @@
 
 <%= form_for @query, url: (@query.persisted? ? query_path(@query, variable_params) : queries_path(variable_params)), html: {class: "the_form", autocomplete: "off"} do |f| %>
   <div class="row">
-    <div id="statement-box" class="col-xs-8">
+    <div id="statement-box" class="col-sm-8">
       <div class= "form-group">
         <%= f.hidden_field :statement %>
         <div id="editor-container">
           <div id="editor"><%= @query.statement %></div>
         </div>
       </div>
-      <div class="form-group text-right">
-        <div class="pull-left" style="margin-top: 9px;">
-          <%= link_to "Back", :back %>
+      <div class="form-group query-actions text-right">
+        <%= link_to "Back", :back, class: 'btn btn-link' %>
+        <%= link_to "Schema", "#", target: "_blank", id: "view-schema", class: 'btn btn-link' %>
+        <div class="selectize-schemas-wrapper">
+          <%= f.select :data_source, Blazer.data_sources.values.map { |ds| [ds.name, ds.id] }, {}, class: ("hide" if Blazer.data_sources.size == 1), style: "width: 140px;" %>
+          <div id="tables" style="display: inline-block; width: 250px; margin-right: 10px;" class="hide">
+            <%= render partial: "tables" %>
+          </div>
+          <script>
+            updatePreviewSelect();
+            $("#query_data_source").selectize().change(updatePreviewSelect);
+          </script>
         </div>
-        <%= link_to "Schema", "#", target: "_blank", id: "view-schema", style: "margin-right: 10px;" %>
-        <%= f.select :data_source, Blazer.data_sources.values.map { |ds| [ds.name, ds.id] }, {}, class: ("hide" if Blazer.data_sources.size == 1), style: "width: 140px;" %>
-        <div id="tables" style="display: inline-block; width: 250px; margin-right: 10px;" class="hide">
-          <%= render partial: "tables" %>
-        </div>
-        <script>
-          updatePreviewSelect();
-          $("#query_data_source").selectize().change(updatePreviewSelect);
-        </script>
-        <%= link_to "Run", "#", class: "btn btn-info", id: "run", style: "vertical-align: top; width: 70px;" %>
-        <%= link_to "Cancel", "#", class: "btn btn-danger hide", id: "cancel", style: "vertical-align: top; width: 70px;" %>
+        <%= link_to "Run", "#", class: "btn btn-info btn-query", id: "run" %>
+        <%= link_to "Cancel", "#", class: "btn btn-danger btn-query hide", id: "cancel" %>
       </div>
     </div>
-    <div class="col-xs-4">
+    <div class="col-sm-4">
       <div class="form-group">
         <%= f.label :name %>
         <%= f.text_field :name, class: "form-control" %>
