--- a/app/views/blazer/queries/home.html.erb
+++ b/app/views/blazer/queries/home.html.erb
@@ -10,6 +10,7 @@
 
         <%= link_to "Mine", root_path(filter: "mine"), class: params[:filter] == "mine" ? "active" : nil, style: "margin-right: 40px;" %>
       <% end %>
+      <%= link_to "Dashboards", root_path(filter: "dashboards"), class: params[:filter] == "dashboards" ? "active" : nil, style: "margin-right: 40px;" %>
       <div class="btn-group">
         <%= link_to "New Query", new_query_path, class: "btn btn-info" %>
         <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -17,11 +18,10 @@
           <span class="sr-only">Toggle Dropdown</span>
         </button>
         <ul class="dropdown-menu">
-          <li><%= link_to "Dashboards", dashboards_path %></li>
-          <li><%= link_to "Checks", checks_path %></li>
-          <li role="separator" class="divider"></li>
           <li><%= link_to "New Dashboard", new_dashboard_path %></li>
           <li><%= link_to "New Check", new_check_path %></li>
+          <li role="separator" class="divider"></li>
+          <li><%= link_to "Checks", checks_path %></li>
         </ul>
       </div>
     </div>
