Fixed js routes

--- a/app/assets/javascripts/blazer/routes.js.erb
+++ b/app/assets/javascripts/blazer/routes.js.erb
@@ -1,1 +1,1 @@
-<%= JsRoutes.generate(include: /blazer/) %>
+<%= JsRoutes.generate(engine: Blazer::Engine, prefix: Blazer::Engine.app.url_helpers.root_path) %>
