Added blazer_js_var helper

--- a/app/views/blazer/_variables.html.erb
+++ b/app/views/blazer/_variables.html.erb
@@ -44,7 +44,7 @@
       </div>
 
       <script>
-        var timeZone = "<%= Blazer.time_zone.tzinfo.name %>";
+        <%= blazer_js_var "timeZone", Blazer.time_zone.tzinfo.name %>
         var format = "YYYY-MM-DD";
         var now = moment.tz(timeZone);
 
